# rules_dotnet

./: .gitignore  BUILD  README.md
docs/: api.md  docs.bzl
dotnet/: defs.bzl
dotnet/platform/: list.bzl
dotnet/private/: BUILD.core.bazel  context.bzl  core_toolchain.bzl  generate_xproj.bzl  repositories.bzl  sdk_core.bzl
dotnet/private/actions/: assembly_common.bzl  assembly_core.bzl
dotnet/private/rules/: binary.bzl  import.bzl  library.bzl  resource_core.bzl  resx.bzl  stdlib.bzl  test.bzl
dotnet/private/rules/csharp/: binary.bzl  library.bzl  test.bzl
dotnet/private/rules/fsharp/: binary.bzl  library.bzl  test.bzl
dotnet/private/stdlib/: 2.1.200-runtime.bzl  2.1.200.bzl  2.1.502-runtime.bzl  2.1.502.bzl  2.1.503-runtime.bzl  2.1.503.bzl  2.2.101-runtime.bzl  2.2.101.bzl  2.2.402-runtime.bzl  2.2.402.bzl  3.0.100-runtime.bzl  3.0.100.bzl  3.1.100-runtime.bzl  3.1.100.bzl  3.1.407-runtime.bzl  3.1.407.bzl  5.0.201-runtime.bzl  5.0.201.bzl
dotnet/stdlib.core/: BUILD.bazel
dotnet/stdlib.core/v2.1.200/: BUILD.bazel
dotnet/stdlib.core/v2.1.502/: BUILD.bazel
dotnet/stdlib.core/v2.1.503/: BUILD.bazel
dotnet/stdlib.core/v2.2.101/: BUILD.bazel
dotnet/stdlib.core/v2.2.402/: BUILD.bazel
dotnet/stdlib.core/v3.0.100/: BUILD.bazel
dotnet/stdlib.core/v3.1.100/: BUILD.bazel
dotnet/stdlib.core/v5.0.102/: BUILD.bazel  generated.bzl  generated2.bzl
dotnet/toolchain/: toolchains.bzl
examples/grpc/: BUILD.bazel  SomeServerTest.fs  WORKSPACE  grpc.csproj
examples/type_providers/: BUILD.bazel  Program.fs  WORKSPACE  type_providers.fsproj
examples/type_providers/type_provider_lib/: BUILD.bazel
tests/core/core_binary/: BUILD.bazel  main.fs  main_test.fs
tests/core/core_library/: BUILD.bazel  main.fs  main_test.fs
tests/core/core_libraryset/: BUILD.bazel  main_test.fs
tests/core/core_resource/: BUILD.bazel  main_test.fs
tests/examples/netstandard/: BUILD
tools/nuget2bazel/: AddCommand.cs  BUILD
tools/nuget2bazel/rules/: RuntimeCoreGenerator.cs  SdkCore.cs  Sdks.cs  StdlibCoreGenerator.cs  StdlibCoreGenerator3.cs  ZipDownloader.cs
tools/paket2bazel/: BUILD.bazel  paket.dependencies  paket2bazel.fs  paket2bazel.fsproj
