load("@io_bazel_rules_dotnet//dotnet/stdlib.core:generated.bzl", "define_stdlib")
load("@io_bazel_rules_dotnet//dotnet/stdlib.core:generated2.bzl", "define_runtime")
load("@io_bazel_rules_dotnet//dotnet/private:rules/import.bzl", "core_import_binary_internal")

package(default_visibility = ["//visibility:public"])

define_stdlib("//:core_context_data")

define_runtime("//:core_context_data")

core_import_binary_internal(
    name = "csc.dll",
    src = "@core_sdk//:core/sdk/5.0.102/Roslyn/bincore/csc.dll",
    data = ["@core_sdk//:csc_deps"],
    version = "3.8.0.0",
)
