load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "fsharp_binary")

fsharp_binary(
    name = "foo.exe",
    srcs = [
        "Program.fs",
    ],
    extra_files = [
        "foo.json",
    ],
    deps = [
        "@FSharp.Data//:FSharp.Data.dll",
        "@FSharp.Data//:FSharp.Data.DesignTime.dll",
        "@core_sdk_stdlib//:libraryset",
    ],
)
