load("generated.bzl", "define_stdlib")
load("generated2.bzl", "define_runtime")
load("@io_bazel_rules_dotnet//dotnet/private:rules/import.bzl", "core_import_binary_internal")

package(default_visibility = ["//visibility:public"])

framework = "v5.0.102"

define_stdlib("@io_bazel_rules_dotnet//:core_context_data_{}".format(framework))

define_runtime("@io_bazel_rules_dotnet//:core_context_data_{}".format(framework))

core_import_binary_internal(
    name = "csc.dll",
    src = "@core_sdk_{}//:core/sdk/5.0.102/Roslyn/bincore/csc.dll".format(framework),
    data = ["@core_sdk_{}//:csc_deps".format(framework)],
    version = "3.8.0.0",
)

core_import_binary_internal(
    name = "fsc.exe",
    src = "@core_sdk_{}//:fsharp/fsc.exe".format(framework),
    data = ["@core_sdk_{}//:fsc_deps".format(framework)],
    version = "11.0.0.0",
)
